--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch
-torchvision
-torchaudio
+torch~=2.2.2+cu121
+torchvision~=2.2.2+cu121
+torchaudio~=2.2.2+cu121
 packaging~=24.0
 logly~=0.0.6
-pandas
-numpy
+pandas>=1.3.3
+numpy>=1.21.2
